# figma-flutter-agent

./: .ai-figma-flutter.yml.example  .control-panel.yml  .control-panel.yml.example  .discord-bot.yml  .discord-bot.yml.example  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CLAUDE.md.example  Caddyfile.example  Dockerfile.control-panel  Dockerfile.control-plane  LICENSE  README.md  Untitled  VPS-DEPLOY.md  alembic.ini  docker-compose.control-panel.yml  docker-compose.control-plane.yml  docker-compose.deploy.yml  docker-compose.local.yml  env.production.example  mypy-baseline.txt  project-bible.mdc  pyproject.toml  tmp_check_tree.py  tmp_inspect_cart.py
.claude/: settings.json
.claude/prompts/: caveman-lite.md  corpus-law.md  debug-common.md  developer.md  docs-layout.md  engineering-posture.md  goal.mdc  pipeline-contracts.md  preprod-lead.mdc  project-bible-lite.md  prompt.md  universal-codegen.md
.cursor/rules/: caveman.mdc  corpus-law.mdc  debug.mdc  developer.mdc  docs-layout.mdc  engineering-posture.mdc  pipeline-contracts.mdc  project-bible.mdc  prompt.mdc  universal-codegen.mdc
.debug/.cursor/: README.md
.debug/background/: plan.dart
.debug/bank_home/: figma.json  llm_parsed.json  llm_validated.json  plan.dart  pre_emit.json  processed.json  provenance.json  screen.dart  semantic_context.json  semantics.json  snapshot.json
.debug/feedback/: figma.json  llm_parsed.json  plan.dart  pre_emit.json  processed.json  provenance.json  screen.dart  semantic_context.json  semantics.json  snapshot.json
.debug/food_details/: figma.json  llm_parsed.json  processed.json  semantics.json
.debug/login_version_1/: ai_ux.json  plan.dart  pre_emit.json  processed.json  provenance.json  screen.bug.dart  screen.dart  semantic_context.json  semantics.json
.gemini/: GEMINI.md
.github/workflows/: ci.yml
.opencode/: README.md  opencode.json
.opencode/agents/: diagnose-architect.md  diagnose-devil.md  diagnose-empiric.md  diagnose-pragmatist.md  diagnose-skeptic.md  repair-build.md  repair-consilium.md  repair-planner.md  repair-review.md
.opencode/context/: README.md  law-label-map-ru.yaml  repo-map.yaml
.opencode/prompts/: README.md  repair-invariants.md  repair-master-forensic.md  repair-master-screen.md
.opencode/skills/: README.md
corpus/: README.md  case-template.yaml  families.yaml
corpus/cases/: 2026-07-03-classification-scope-violation-synthetic.yaml  2026-07-03-cp2-graph-sync-extracted-boundary-synthetic.yaml  2026-07-03-extracted-widget-conservation-synthetic.yaml  2026-07-03-fidelity-authority-synthetic.yaml  2026-07-03-graph-sync-violation-synthetic.yaml  2026-07-03-ir-override-provenance-synthetic.yaml  2026-07-03-node-multiset-loss-synthetic.yaml  2026-07-03-pass-over-mutation-synthetic.yaml  2026-07-03-screen-root-scope-veto-synthetic.yaml  2026-07-03-semantic-candidate-weekday-chip-synthetic.yaml  2026-07-03-semantic-upgrade-evidence-synthetic.yaml  2026-07-03-semantic-veto-size-picker-synthetic.yaml  2026-07-04-control-misclassified-as-text-input.yaml  2026-07-04-extracted-semantic-classify-boundary.yaml  2026-07-04-sectionize-nav-scroll-host-emit-drop.yaml  2026-07-05-bottom-nav-material-elevation-shadow.yaml  2026-07-05-button-surface-omit-without-transfer.yaml  2026-07-05-chevron-fill-plate-occludes-glyph.yaml  2026-07-05-cluster-delegate-reconcile-clobber.yaml  2026-07-05-cluster-widget-zero-height-stack-unbound.yaml  2026-07-05-compact-icon-host-foreground-omit.yaml  2026-07-05-extracted-avatar-widget-subtree-collapse.yaml  2026-07-05-ir-cache-assert-bypasses-policy.yaml  2026-07-05-radio-exact-paint-native-double-stack.yaml  2026-07-06-cluster-spacer-shrink-shell.yaml  (+63 more)
deploy/: README.md  docker-compose.vps.yml  entrypoint.sh  env.production.example
docs/: README.md
linters/: emitter_baseline.txt
refactor/: 00_defect-taxonomy-corpus.md  01_compiler-semantics-ir-contract.md  08_property-based-testing.md  09_hierarchical-visual-oracle.md  README.md
scripts/: README.md  _analyze_background_layout.py  _demo_sanitize_out.txt  _demo_sanitize_snip.txt  _find_paren.py  _fix_out.txt  _golden_stack.txt  _quick_gate_check.py  _quick_layout_snip.py  _snip3973.py  _snip_heights.py  _test_date_input.py  annotate_terminal_log.py  bootstrap.ps1  burn_archetype_predicates.py  cleanup-repair-branches.ps1  count_loc.py  debug_chunk_emit.py  deploy-vps.sh  e2e-manual.ps1  e2e-manual.sh  export_w1_semantics_fixtures.py  generate-font-registry.py  generate_fixture_goldens.py  gitlab-workflow-smoke.ps1  lint_baseline.py  lint_dart_in_python.py  lint_hardcoded_colors.py  lint_regex_dart_surgery.py  lint_settings_purity.py  opencode-api-init.ps1  opencode-api-init.sh  opencode-api-sparse.txt  refresh_planned_goldens.py  refresh_reference_from_lib.py  regen-layout-from-dump.py  regen_content_widget_v6.py  regen_music_v2_layout.py  render_spike.py  repair-merge-pack.ps1  (+11 more)
src/: README.md
tests/: README.md  __init__.py  _fmt_out.txt  conftest.py  defect_case_meta.py  font_bytes.py  helpers.py  test_ac4_reconcile_ast.py  test_acceptance.py  test_acceptance_e2e.py  test_acceptance_spec23.py  test_acceptance_spec23_llm.py  test_accessibility.py  test_accessibility_contrast.py  test_accessibility_fixes.py  test_accessibility_provenance.py  test_affine_calibration.py  test_affine_cascade.py  test_agent_log_purge.py  test_ai_reusable_detection.py  test_ambient_background.py  test_analyze_diagnostics_log.py  test_animations.py  test_app_typography_collapse.py  test_archetype_compensation_policy.py  test_archetype_emit_gating.py  test_artboard.py  test_artboard_frame_growth.py  test_artboard_preview_emit.py  test_asset_export_from_dump.py  test_asset_raster_fallback.py  test_asset_reporting.py  test_assets_diagnostics.py  test_ast_extract_widget.py  test_ast_reconcile_cache_log.py  test_ast_sidecar.py  test_ast_sidecar_build.py  test_ast_sidecar_retry.py  test_audit_pipeline.py  test_auth_button_icon_placement.py  (+610 more)
tools/: _cluster0_processed.dart  _diag_inv.py  _flex_ctx.py  _scan2.py  _snip_layout.py  build_sidecars.ps1  build_sidecars.sh
(+2761 files in other folders)
