[project]
name = "figma-flutter-agent"
version = "0.1.0"
description = "Figma to Flutter Adaptive Layout Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Celestial Agents" }]
dependencies = [
    "anthropic>=0.49.0",
    "openai (>=1.40.0,<2.0.0)",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "ruamel-yaml>=0.18.0",
    "typer>=0.12.0",
    "pillow>=10.0.0",
]

[project.scripts]
figma-flutter = "figma_flutter_agent.cli:app"
figma-flutter-control-panel = "control_panel.main:main"
figma-flutter-discord = "control_panel.main:legacy_main"
figma-flutter-worker = "control_panel.workers.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]
preview = [
    "playwright>=1.40",
]
control_plane = [
    "disnake>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
]
discord = [
    "disnake>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/figma_flutter_agent", "src/control_panel"]

[tool.hatch.build.targets.wheel.force-include]
"src/figma_flutter_agent/generator/templates" = "figma_flutter_agent/generator/templates"
"src/figma_flutter_agent/generator/ir/data" = "figma_flutter_agent/generator/ir/data"
"src/figma_flutter_agent/fonts/data" = "figma_flutter_agent/fonts/data"
"src/figma_flutter_agent/validation/data" = "figma_flutter_agent/validation/data"


[tool.poetry.group.dev.dependencies]
respx = "^0.23.1"
ruff = "^0.15.14"
mypy = ">=1.10.0,<2"
pre-commit = "^4.6.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_figma: live Figma API smoke tests (require FIGMA_ACCESS_TOKEN and smoke env vars)",
    "live_llm: live LLM semantic IR smoke tests (require provider API key; skipped by default)",
    "spike: one-off rendering calibration harness (excluded from default CI)",
    "discord: Discord bot integration tests (optional control_plane deps)",
    "control_plane: Control plane tests (Postgres, Redis, FastAPI, ARQ)",
    "repair_live: live OpenCode repair smoke (require pinned opencode serve)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "logs",
    ".venv",
    "venv",
    ".ruff_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "B039"]

[tool.ruff.lint.per-file-ignores]
"src/figma_flutter_agent/cli/*.py" = ["B008"]
"src/control_panel/api/**/*.py" = ["B008"]
"src/figma_flutter_agent/**/__init__.py" = ["F401"]
"scripts/**/*.py" = ["E402"]
"tests/**/*.py" = ["SIM117"]
"src/figma_flutter_agent/generator/layout/widgets/emit/containers.py" = ["E402"]
"src/figma_flutter_agent/generator/planned/reconcile/delegate_repair.py" = ["E402"]
# E0 revert: pre-756d14b snippet hashes required by semantics baseline gate.
"src/figma_flutter_agent/parser/interaction/forms.py" = ["SIM103", "SIM110"]
"src/figma_flutter_agent/parser/interaction/__init__.py" = ["I001"]
"src/figma_flutter_agent/generator/layout/flex_policy/row.py" = ["SIM103", "SIM110"]
"src/figma_flutter_agent/generator/layout/flex_policy/stack.py" = ["SIM103", "SIM110", "I001"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
# Mypy 2.x enables local_partial_types by default; keep 1.x behavior until tests/src are migrated.
local_partial_types = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "figma_flutter_agent.pipeline",
    "figma_flutter_agent.pipeline.*",
    "figma_flutter_agent.config",
    "figma_flutter_agent.errors",
    "figma_flutter_agent.figma",
    "figma_flutter_agent.figma.*",
    "figma_flutter_agent.schemas",
    "figma_flutter_agent.redaction",
    "figma_flutter_agent.observability",
    "figma_flutter_agent.stages.*",
    "figma_flutter_agent.llm.*",
    "figma_flutter_agent.figma.connector",
    "figma_flutter_agent.figma.url",
    "figma_flutter_agent.sync.snapshot",
    "figma_flutter_agent.sync.diff",
    "figma_flutter_agent.parser.tree",
    "figma_flutter_agent.generator.planner",
    "figma_flutter_agent.generator.writer",
    "figma_flutter_agent.generator.codegen",
    "figma_flutter_agent.generator.validation",
    "figma_flutter_agent.generator.layout.widget",
    "figma_flutter_agent.generator.layout.renderer",
]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
